# LargerThanLife

./: Button.py  Cargo.toml  InputTextBox.py  Makefile  README.md  game.py  main.py  menu.py  pyproject.toml  scene.py  setup.cfg
components/: __init__.py
ltl-game/: README.md  pyproject.toml  setup.cfg
ltl-game/ltl_game/: main.py
ltl-game/ltl_game/scenes/: __init__.py  game.py  menu.py  window.py
ltl-game/ltl_game/scenes/components/: Button.py  Component.py  InputTextBox.py  __init__.py
res/: board.csv  rules.json
res/boards/: b_bugs.csv  board.csv  empty.csv  l_blinker.csv  l_block.csv  l_flower.csv  l_glider.csv  l_pulsar.csv  l_test_blinker.csv
res/rules/: bosco.json  bugs_movie.json  globe.json  gnarl.json  life.json  majority.json  majorly.json  modern_art.json  waffle.json  wrong.json
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
scenes/: __init__.py  game.py  menu.py
scenes/components/: Button.py  InputTextBox.py  __init__.py
src/main/python/: main.py
src/main/python/scenes/: Game.py  Menu.py  Window.py  __init__.py  game.py  menu.py  scene.py
src/main/python/scenes/components/: Button.py  Component.py  Counter.py  InputTextBox.py  TextLabel.py  __init__.py
src/main/rust/: engine.rs  flag.rs  lib.rs  neighbourhood.rs  rules.rs
src/test/: test_integration.py  test_ltl_game.py
