[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
path = "src/main/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
csv = "1.1"
itertools = "0.10.2"
pyo3 = { version = "0.16.1", features = ["extension-module"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tuple-transpose = "0.1.0"

[build-dependencies]
clippy = { version = "*", optional = true }